--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.16",
+    "@phosphor-icons/react": "^2.1.5",
     "@vanilla-extract/css": "^1.9.5",
     "jotai": "^2.0.3",
     "react": "^18.2.0",
